# src/lib/infrastructure/inbound/rest/handler/identity/post_login.rs
@@ -87,6 +87,7 @@ impl From<LoginUserError> for ApiError {
             description = "Unexpected error"
         ),
     ),
+    security(()),
     summary = "Authenticate a user"
 )]
 pub async fn post_login(
